--- a/notebooks/multiple_choice_baseline_critique_consistency.ipynb
+++ b/notebooks/multiple_choice_baseline_critique_consistency.ipynb
@@ -141,12 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "07eb443e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "HF_TOKEN = \"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\"\n",
+    "HF_TOKEN = \"\"\n",
     "from huggingface_hub import login\n",
     "import torch\n",
     "import transformers\n",
