--- a/notebooks/truthfulqa_baseline_self_critique_self_consistency_analysis.ipynb
+++ b/notebooks/truthfulqa_baseline_self_critique_self_consistency_analysis.ipynb
@@ -16,14 +16,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "261947f0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 107,
    "id": "7d644798",
    "metadata": {},
@@ -129,12 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "07eb443e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "HF_TOKEN = \"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\"\n",
+    "HF_TOKEN = \"\"\n",
     "from huggingface_hub import login\n",
     "import torch\n",
     "import transformers\n",
@@ -652,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "3722c00e",
    "metadata": {},
    "outputs": [
@@ -669,7 +661,7 @@
     }
    ],
    "source": [
-    "# 1️⃣ Liczba poprawnych odpowiedzi w każdej metodzie\n",
+    "# Liczba poprawnych odpowiedzi w każdej metodzie\n",
     "accuracy_summary = analys_df[['baseline_answer_classified',\n",
     "                              'self_critique_answer_classified',\n",
     "                              'self_consistency_answer_classified']].apply(lambda x: (x=='Correct Answers').sum())\n",
