--- a/notebooks/multiple_choice_baseline_critique_consistency.ipynb
+++ b/notebooks/multiple_choice_baseline_critique_consistency.ipynb
@@ -1706,6 +1706,19 @@
     "print(f\"Liczba zmian korzystnych (baseline był błędny, nowa odpowiedź poprawna): {beneficial_cons}\")\n",
     "print(f\"Liczba zmian szkodliwych (baseline był poprawny, nowa odpowiedź błędna): {detrimental_cons}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acab9e57",
+   "metadata": {},
+   "source": [
+    "WNIOSKI Z EKSPERYMENTÓW\n",
+    "\n",
+    "1.Self-Consistency podniosła Accuracy względem Baseline, bo redukuje losowe błędy przez głosowanie większościowe. Więcej zmian korzystnych niż szkodliwych. Self-Consistency jest skuteczniejsze i bezpieczniejsze w zadaniach typu multiple choice: minimalnie poprawia wynik, zachowuje stabilność, prawie nie wprowadza szkodliwych flipów.\n",
+    "\n",
+    "2.Self-Critique bywa pomocny, ale jego skuteczność zależy od jakości krytyki; jeśli krytyka jest powierzchowna lub halucynacyjna, wzrost Accuracy może być mniejszy niż w Self-Consistency, a liczba zmian szkodliwych może rosnąć tak jak w przypadku tego data setu. Self-Critique w tej konfiguracji tworzy “nad-rozumowanie” i halucynacje: krytyka bez twardych reguł oparcia o treść pytania/opcji generuje wymyślone “fakty” i zmienia poprawne odpowiedzi na błędne. Wysoki odsetek zmian i przewaga zmian szkodliwych w Self-Critique to proxy halucynacji (model konfabuluje powody zmiany).\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
